Fixed overflow in Projects collections

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -132,3 +132,11 @@ classes
 .px-4 {
   padding-left: 4rem;
   padding-right: 4rem; }
+
+/*
+fonts.scss
+-------------------------------------------------------
+A set of rules defining which fonts are used where
+*/
+body {
+  font-family: Lato; }
